# house-jobs

./: .gitignore  CLAUDE.md  DATASETTE_EXAMPLES.md  INTERFACES.md  LICENSE  QUICK_START.md  README.md  README_RESEARCH_TOOL.md  analyze_classifications.py  compare_parses.py  config.py  db_loader.py  find_duplicates.py  init_database.py  job_classifier.py  metadata.yml  parser.py  parser2.py  pyproject.toml  requirements.txt  run_datasette.py  schema.sql  test_classifier.py  validate.py  web_interface.py
docs/: research.md
internships_text/: 01-06-14 Internship Vacancies.txt  01-13-14 Internship Vacancies.txt  01-20-14 Internship Vacancies.txt  01-27-14 Internship Vacancies.txt  02-03-14 Internship Vacancies.txt  12-02-13 Internship Vacancies.txt  12-09-13 Internship Vacancies.txt  12-16-13 Internship Vacancies.txt  12-23-13 Internship Vacancies.txt  Internship Bulletin 01.07.2019.txt  Internship Bulletin 01.13.2020v2.txt  Internship Bulletin 01.14.2019.txt  Internship Bulletin 01.21.2019.txt  Internship Bulletin 01.21.2020 v2.txt  Internship Bulletin 01.27.2020 v2.txt  Internship Bulletin 01.28.2019.txt  Internship Bulletin 02.03.2020 v2.txt  Internship Bulletin 02.04.2019.txt  Internship Bulletin 02.10.2020 v2.txt  Internship Bulletin 02.11.2019.txt  Internship Bulletin 02.18.2019.txt  Internship Bulletin 02.18.2020 v2.txt  Internship Bulletin 02.24.2020 v2.txt  Internship Bulletin 02.25.2019.txt  Internship Bulletin 03.02.2020 v2.txt  Internship Bulletin 03.04.2019.txt  Internship Bulletin 03.09.2020 v2.txt  Internship Bulletin 03.11.2019.txt  (+288 more)
skills/: cluster_jobs.py  (+3 more)
(+2910 files in other folders)
