[project]
name = "house-jobs"
version = "0.1.0"
description = "Congressional job listings parser and classifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llm>=0.26",
    "strip-tags>=0.5.1",
    "ttok>=0.3",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
